# stache-ai

./: .env.advanced  .env.example  .env.frontend  .env.quickstart  .gitignore  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  FRONTEND_ENV_SETUP.md  LICENSE  MIGRATION.md  README.md  RELEASE_NOTES.md  RENAME_BATCH3_VERIFICATION.md  docker-compose.local.yml  docker-compose.ollama-host.yml  docker-compose.openai.yml  docker-compose.yml  setup.sh
docs/: api-reference.md  deduplication-and-trash.md  document-management.md  mcp-setup.md  plugins.md  release-0.2.md
examples/plugins/ragbrain-example-provider/: README.md  pyproject.toml
examples/plugins/ragbrain-example-provider/stache_example/: __init__.py  provider.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.vue  config.js  main.js
frontend/src/api/: auth.js  client.js  client.spec.js
frontend/src/components/: AuthStatus.vue  DocManagementDropdown.vue  MetadataFields.vue  NamespaceSelector.vue  NamespaceSelectorNode.vue  NamespaceTreeDropdown.vue  NamespaceTreeDropdownNode.vue  NamespaceTreeNode.vue
frontend/src/pages/: Account.spec.js  Account.vue  Capture.vue  Documents.vue  Home.vue  Jobs.vue  Namespaces.vue  PendingQueue.vue  Query.vue  Trash.vue
scripts/: verify_entry_points.py
tools/mcp-server/: STACHE.md  install.sh  stache_mcp.py
